--- a/ContactsDirectory.Ui/ContactsDirectory.Ui.csproj
+++ b/ContactsDirectory.Ui/ContactsDirectory.Ui.csproj
@@ -9,6 +9,9 @@
   <ItemGroup>
     <PackageReference Include="Autofac" Version="5.1.3" />
     <PackageReference Include="Autofac.Extras.CommonServiceLocator" Version="6.0.0" />
+    <PackageReference Include="MaterialDesignColors" Version="1.2.4" />
+    <PackageReference Include="MaterialDesignThemes" Version="3.1.1" />
+    <PackageReference Include="Microsoft.Xaml.Behaviors.Wpf" Version="1.1.19" />
   </ItemGroup>
 
   <ItemGroup>
